Nutch Change Log

Nutch Development Trunk

* NUTCH-1413 Record response time (Yasin Kılınç, Talat Uyarer, snagel)

* NUTCH-1325 HostDB for Nutch (markus, tejasp)

* NUTCH-1680 CrawlDbReader to dump minRetry value (markus)

* NUTCH-1699 Tika Parser - Image Parse Bug (Mehmet Zahid Yüzügüldü, snagel via lewismc)

* NUTCH-1695 Add NutchDocument.toString() to ease debugging (markus)

* NUTCH-1675 NutchField to support long (markus)

* NUTCH-1670 set same crawldb directory in mergedb parameter (lufeng via tejasp)

* NUTCH-1080 Type safe members, arguments for better readability (tejasp)

* NUTCH-1360 Suport the storing of IP address connected to when web crawling (lewismc, ferdy and Yasin Kılınç)

* NUTCH-1681 In URLUtil.java, toUNICODE method does not work correctly (İlhami KALKAN, snagel via markus)

* NUTCH-1668 Remove package org.apache.nutch.indexer.solr (jnioche)

* NUTCH-1621 Remove deprecated class o.a.n.crawl.Crawler (Rui Gao via jnioche)

* NUTCH-656 Generic Deduplicator (jnioche, snagel)

* NUTCH-1100 Avoid NPE in SOLRDedup (markus)

* NUTCH-1666 Optimisation for BasicURLNormalizer (jnioche)

* NUTCH-1656 ParseMeta not passed to CrawlDatum for not_modified (markus)

* NUTCH-1606 Check that Factory classes use the cache in a thread safe way (jnioche)

* NUTCH-1653 AbstractScoringFilter (jnioche)

* NUTCH-1562 Order of execution for scoring filters (jnioche, snagel)

* NUTCH-1640 Reuse ParseUtil instance in ParseSegment (Mitesh Singh Jat via jnioche)

* NUTCH-1639 bin/crawl fails on mac os (various contributors via snagel)

* NUTCH-1646 IndexerMapReduce to consider DB status (markus)

* NUTCH-1636 Indexer to normalize and filter repr URL (Iain Lopata via snagel)

* NUTCH-1637 URLUtil is missing getProtocol (markus)

* NUTCH-1622 Create Outlinks with metadata (jnioche)

* NUTCH-1629 Injector skips empty lines in seed files (kaveh minooie via jnioche)

* NUTCH-911 protocol-file to return proper protocol status (Peter Lundberg via snagel)
