@@ -2,6 +2,8 @@ Nutch Change Log
 
 Nutch Development Trunk
 
+* NUTCH-356 Plugin repository cache can lead to memory leak (Enrico Triolo, Doğacan Güney via markus)
+
 * NUTCH-1413 Record response time (Yasin Kılınç, Talat Uyarer, snagel)
 
 * NUTCH-1325 HostDB for Nutch (markus, tejasp)
